--- a/L/LightGBM/Compat.toml
+++ b/L/LightGBM/Compat.toml
@@ -16,5 +16,8 @@ StatsBase = "0.32-0.33"
 ["0.3-0.3.1"]
 MLJModelInterface = "0.3"
 
-["0.3.2-0"]
+["0.3.2-0.4"]
 MLJModelInterface = "0.3.6-0.3"
+
+["0.5-0"]
+MLJModelInterface = "0.3.6-0.4"
