New version: DifferencesBase v0.9.0
UUID: f7c07657-0d0a-4d46-b086-01df223a7b4f
Repo: https://github.com/laschuet/DifferencesBase.jl.git
Tree: bae0e961c52a7daa0779cf9a9e7f4b3b30f22525

Registrator tree SHA: 7c16227cd1dc9bae38e25d6dc6f9c020f8ebca46

--- a/D/DifferencesBase/Versions.toml
+++ b/D/DifferencesBase/Versions.toml
@@ -21,3 +21,6 @@ git-tree-sha1 = "3b56fbc678ef23e5ab915da3e9b000da8ac37026"
 
 ["0.8.0"]
 git-tree-sha1 = "fd385729313fcfb7a33d5b370a95355102efcf7d"
+
+["0.9.0"]
+git-tree-sha1 = "bae0e961c52a7daa0779cf9a9e7f4b3b30f22525"
