--- a/V/Vlasiator/Versions.toml
+++ b/V/Vlasiator/Versions.toml
@@ -30,3 +30,6 @@ git-tree-sha1 = "d7bac552d3ac8fef8613da6848ef30f484685c20"
 
 ["0.2.0"]
 git-tree-sha1 = "ff0daade2d36fde317b280bf28b1609921926cbd"
+
+["0.2.1"]
+git-tree-sha1 = "333bdc7cac0f50a417871e7996842a4578156f0e"
