New version: InteractiveDynamics v0.13.2
UUID: ec714cd0-5f51-11eb-0b6e-452e7367ff84
Repo: https://github.com/JuliaDynamics/InteractiveDynamics.jl.git
Tree: 24b33a27ecac1891ea345db1f0d240b0200df684

Registrator tree SHA: 7c16227cd1dc9bae38e25d6dc6f9c020f8ebca46

--- a/I/InteractiveDynamics/Versions.toml
+++ b/I/InteractiveDynamics/Versions.toml
@@ -3,3 +3,6 @@ git-tree-sha1 = "d06d2737e7097514127a12fcef4f918b62d60718"
 
 ["0.13.1"]
 git-tree-sha1 = "d7be742199f629502f5b717bde076ba1a2b1f4bd"
+
+["0.13.2"]
+git-tree-sha1 = "24b33a27ecac1891ea345db1f0d240b0200df684"
