--- a/F/FlxQTL/Deps.toml
+++ b/F/FlxQTL/Deps.toml
@@ -8,3 +8,6 @@ Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
+
+["0.1.1-0"]
+StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
