--- a/Registry.toml
+++ b/Registry.toml
@@ -2469,6 +2469,7 @@ some amount of consideration when choosing package names.
 79e443b6-e52e-5c29-b616-02b77327f8c3 = { name = "ReinforcementLearningEnvironmentGym", path = "R/ReinforcementLearningEnvironmentGym" }
 79e6a3ab-5dfb-504d-930d-738a2a938a0e = { name = "Adapt", path = "A/Adapt" }
 7a06699c-c960-11e9-3c98-9f78548b5f0f = { name = "YaoExtensions", path = "Y/YaoExtensions" }
+7a098a08-e70e-483f-ae9c-35bef3462704 = { name = "TermoQuimica", path = "T/TermoQuimica" }
 7a12625a-238d-50fd-b39a-03d52299707e = { name = "LinearMaps", path = "L/LinearMaps" }
 7a16de70-abc6-11e8-02b0-4fe68abe0eac = { name = "RawFile", path = "R/RawFile" }
 7a1ad169-5d6d-5d19-843c-e04c00abb03b = { name = "tree_sitter_json_jll", path = "T/tree_sitter_json_jll" }
