--- a/J/JMcDM/Compat.toml
+++ b/J/JMcDM/Compat.toml
@@ -1,5 +1,10 @@
 [0]
 Cbc = "0.7.1-0.7"
-DataFrames = "0.22"
 JuMP = "0.21.6-0.21"
 julia = "1.4.0-1"
+
+["0-0.1.0"]
+DataFrames = "0.22"
+
+["0.1.1-0"]
+DataFrames = "0.22.5-0.22"
