--- a/J/JMcDM/Versions.toml
+++ b/J/JMcDM/Versions.toml
@@ -1,2 +1,5 @@
 ["0.1.0"]
 git-tree-sha1 = "61a620ef3325bcc4f2e8f0c2d747f0b009c2543e"
+
+["0.1.1"]
+git-tree-sha1 = "51c6289bd0dd39ab6c200aca60c13768dc3c8eb1"
