New version: Vlasiator v0.2.2
UUID: 7d2ba682-ad6e-4e20-80d9-3f2d4a610bb4
Repo: https://github.com/henry2004y/Vlasiator.jl.git
Tree: 8be7cea51a77e4c9a150c18c1a4e0afe29e58ceb

Registrator tree SHA: 7c16227cd1dc9bae38e25d6dc6f9c020f8ebca46

--- a/V/Vlasiator/Versions.toml
+++ b/V/Vlasiator/Versions.toml
@@ -33,3 +33,6 @@ git-tree-sha1 = "ff0daade2d36fde317b280bf28b1609921926cbd"
 
 ["0.2.1"]
 git-tree-sha1 = "333bdc7cac0f50a417871e7996842a4578156f0e"
+
+["0.2.2"]
+git-tree-sha1 = "8be7cea51a77e4c9a150c18c1a4e0afe29e58ceb"
