--- a/S/Schemata/Compat.toml
+++ b/S/Schemata/Compat.toml
@@ -50,3 +50,11 @@ CategoricalArrays = "0.8.1-0.8"
 DataFrames = "0.21.2-0.21"
 Parsers = "1.0.5-1"
 Tables = "1.0.4-1"
+
+[3]
+CSV = "0.8.3-0.8"
+CategoricalArrays = "0.9.2-0.9"
+DataFrames = "0.22.5-0.22"
+Parsers = "1.0.15-1"
+Tables = "1.3.2-1"
+julia = "1.6.0-1"
