--- a/S/Schemata/Versions.toml
+++ b/S/Schemata/Versions.toml
@@ -33,3 +33,6 @@ git-tree-sha1 = "06d7899132b2f84f9af73734e09fe73faa3b7f45"
 
 ["2.0.8"]
 git-tree-sha1 = "205900995d93ecfd528d1840cacf75154463f9ea"
+
+["3.0.0"]
+git-tree-sha1 = "2662f6e57e48f62fb55cbceebe66d1197eff8f79"
