New version: LocalSearchSolvers v0.2.0
UUID: 2b10edaa-728d-4283-ac71-07e312d6ccf3
Repo: https://github.com/JuliaConstraints/LocalSearchSolvers.jl.git
Tree: b072854474da07d056e707510fa4d3b1467a8b5d

Registrator tree SHA: 7c16227cd1dc9bae38e25d6dc6f9c020f8ebca46

--- a/L/LocalSearchSolvers/Compat.toml
+++ b/L/LocalSearchSolvers/Compat.toml
@@ -38,3 +38,7 @@ Dictionaries = "0.3"
 CompositionalNetworks = "0.1"
 ConstraintDomains = "0.1"
 Constraints = "0.1"
+
+["0.2-0"]
+JuMP = "0.21"
+MathOptInterface = "0.9"
