--- a/L/LocalSearchSolvers/Versions.toml
+++ b/L/LocalSearchSolvers/Versions.toml
@@ -27,3 +27,6 @@ git-tree-sha1 = "cc11ba2d19e2bfd08407b969d94ca1d7973af9b8"
 
 ["0.1.9"]
 git-tree-sha1 = "9432f923f07121f93b5f87ec572ff0ec86b55cbc"
+
+["0.2.0"]
+git-tree-sha1 = "b072854474da07d056e707510fa4d3b1467a8b5d"
