New version: GAMS v0.2.1
UUID: 1ca51c6a-1b4d-4546-9ae1-53e0a243ab12
Repo: https://github.com/GAMS-dev/gams.jl.git
Tree: 601e9c079eda2855c57d657ac90f2e546341b26a

Registrator tree SHA: 7c16227cd1dc9bae38e25d6dc6f9c020f8ebca46

--- a/G/GAMS/Versions.toml
+++ b/G/GAMS/Versions.toml
@@ -21,3 +21,6 @@ git-tree-sha1 = "dda4a209e4e39c97c9561d63a6539d4651d3216e"
 
 ["0.2.0"]
 git-tree-sha1 = "62d9f6fe677ab0acdedbc3828bf46f403dab4290"
+
+["0.2.1"]
+git-tree-sha1 = "601e9c079eda2855c57d657ac90f2e546341b26a"
