--- a/D/DifferencesBase/Versions.toml
+++ b/D/DifferencesBase/Versions.toml
@@ -24,3 +24,6 @@ git-tree-sha1 = "fd385729313fcfb7a33d5b370a95355102efcf7d"
 
 ["0.9.0"]
 git-tree-sha1 = "bae0e961c52a7daa0779cf9a9e7f4b3b30f22525"
+
+["0.10.0"]
+git-tree-sha1 = "43cfdc5974c40b7715883677582e7b5a7bce678c"
