New version: DifferencesBase v0.11.0
UUID: f7c07657-0d0a-4d46-b086-01df223a7b4f
Repo: https://github.com/laschuet/DifferencesBase.jl.git
Tree: ebf7ea08fbb343fd5326c4d08d0a14d1aae9ff71

Registrator tree SHA: 7c16227cd1dc9bae38e25d6dc6f9c020f8ebca46

--- a/D/DifferencesBase/Versions.toml
+++ b/D/DifferencesBase/Versions.toml
@@ -27,3 +27,6 @@ git-tree-sha1 = "bae0e961c52a7daa0779cf9a9e7f4b3b30f22525"
 
 ["0.10.0"]
 git-tree-sha1 = "43cfdc5974c40b7715883677582e7b5a7bce678c"
+
+["0.11.0"]
+git-tree-sha1 = "ebf7ea08fbb343fd5326c4d08d0a14d1aae9ff71"
