--- a/D/DifferencesBase/Versions.toml
+++ b/D/DifferencesBase/Versions.toml
@@ -30,3 +30,6 @@ git-tree-sha1 = "43cfdc5974c40b7715883677582e7b5a7bce678c"
 
 ["0.11.0"]
 git-tree-sha1 = "ebf7ea08fbb343fd5326c4d08d0a14d1aae9ff71"
+
+["0.12.0"]
+git-tree-sha1 = "4080616c55eb05d0682cefa725c503cf045ce1f5"
