New version: DifferencesBase v0.13.0
UUID: f7c07657-0d0a-4d46-b086-01df223a7b4f
Repo: https://github.com/laschuet/DifferencesBase.jl.git
Tree: 2633488552942f0f94c42344c6ed4e314fca0cbc

Registrator tree SHA: 7c16227cd1dc9bae38e25d6dc6f9c020f8ebca46

--- a/D/DifferencesBase/Versions.toml
+++ b/D/DifferencesBase/Versions.toml
@@ -33,3 +33,6 @@ git-tree-sha1 = "ebf7ea08fbb343fd5326c4d08d0a14d1aae9ff71"
 
 ["0.12.0"]
 git-tree-sha1 = "4080616c55eb05d0682cefa725c503cf045ce1f5"
+
+["0.13.0"]
+git-tree-sha1 = "2633488552942f0f94c42344c6ed4e314fca0cbc"
