--- a/J/JMcDM/Versions.toml
+++ b/J/JMcDM/Versions.toml
@@ -6,3 +6,6 @@ git-tree-sha1 = "51c6289bd0dd39ab6c200aca60c13768dc3c8eb1"
 
 ["0.1.2"]
 git-tree-sha1 = "7577fddde5c2e63c6482c3204e73322fef035ed6"
+
+["0.1.3"]
+git-tree-sha1 = "f3c9b595b844fb14cade2f617647a230bbacee3d"
