--- a/I/ImplicitGraphs/Deps.toml
+++ b/I/ImplicitGraphs/Deps.toml
@@ -1,3 +1,6 @@
 [0]
 DataStructures = "864edb3b-99cc-5e75-8d2d-829cb0a9cfe8"
 SimpleGraphs = "55797a34-41de-5266-9ec1-32ac4eb504d3"
+
+["0.1.1-0"]
+IterTools = "c8e1da08-722c-5040-9ed9-7db0dc04731e"
