--- a/B/BlockDiagonals/Versions.toml
+++ b/B/BlockDiagonals/Versions.toml
@@ -39,3 +39,6 @@ git-tree-sha1 = "e3f15edc60bd09ff598d7c0b078a5b5ca4fc6c2d"
 
 ["0.1.13"]
 git-tree-sha1 = "a0b8235d0c28c96d0b6f6e458654655020c35e75"
+
+["0.1.14"]
+git-tree-sha1 = "109b86b95295ca54588fdeb82b599ead2a3de258"
