New version: ChaosTools v1.24.0
UUID: 608a59af-f2a3-5ad4-90b4-758bdf3122a7
Repo: https://github.com/JuliaDynamics/ChaosTools.jl.git
Tree: f3ca364c2d3d02ef309a2614e87155365c27bef4

Registrator tree SHA: 7c16227cd1dc9bae38e25d6dc6f9c020f8ebca46

--- a/C/ChaosTools/Versions.toml
+++ b/C/ChaosTools/Versions.toml
@@ -135,3 +135,6 @@ git-tree-sha1 = "ab339b3a6ee2444ce131281b657c6b10c70e6e2c"
 
 ["1.23.1"]
 git-tree-sha1 = "21b4730b7f9defde23e3882d07f4f46ff146edc1"
+
+["1.24.0"]
+git-tree-sha1 = "f3ca364c2d3d02ef309a2614e87155365c27bef4"
