New version: DrWatson v1.18.2
UUID: 634d3b9d-ee7a-5ddf-bec9-22491ea816e1
Repo: https://github.com/JuliaDynamics/DrWatson.jl.git
Tree: 08cf38daf136255d278f9cd1e851a071695658ca

Registrator tree SHA: 7c16227cd1dc9bae38e25d6dc6f9c020f8ebca46

--- a/D/DrWatson/Versions.toml
+++ b/D/DrWatson/Versions.toml
@@ -213,3 +213,6 @@ git-tree-sha1 = "e0dc5a9c7802730967cc56c17a733fe52775b2ee"
 
 ["1.18.1"]
 git-tree-sha1 = "e12dac74dc7287141f6f72429b7a9e0320b3e9e9"
+
+["1.18.2"]
+git-tree-sha1 = "08cf38daf136255d278f9cd1e851a071695658ca"
