New version: DifferencesBase v0.14.0
UUID: f7c07657-0d0a-4d46-b086-01df223a7b4f
Repo: https://github.com/laschuet/DifferencesBase.jl.git
Tree: 8d65cc4e690a8cef0bdc4c01f8494f573b98dbdb

Registrator tree SHA: 7c16227cd1dc9bae38e25d6dc6f9c020f8ebca46

--- a/D/DifferencesBase/Versions.toml
+++ b/D/DifferencesBase/Versions.toml
@@ -36,3 +36,6 @@ git-tree-sha1 = "4080616c55eb05d0682cefa725c503cf045ce1f5"
 
 ["0.13.0"]
 git-tree-sha1 = "2633488552942f0f94c42344c6ed4e314fca0cbc"
+
+["0.14.0"]
+git-tree-sha1 = "8d65cc4e690a8cef0bdc4c01f8494f573b98dbdb"
