--- a/P/PkgUtility/Versions.toml
+++ b/P/PkgUtility/Versions.toml
@@ -3,3 +3,6 @@ git-tree-sha1 = "4fe612b1eecbb888fc39388cf651aa164a379798"
 
 ["0.1.1"]
 git-tree-sha1 = "f2ef118ced3906dcf521cc859fd13515c8c1f262"
+
+["0.1.2"]
+git-tree-sha1 = "9b2114623f87d590114be3a4d27a0590069ef1fb"
