New version: GriddingMachine v0.1.3
UUID: f20cf718-bf4d-4727-bc8f-485b1f283ac6
Repo: https://github.com/CliMA/GriddingMachine.jl.git
Tree: 5c20012212c0bf91b04ab88ba65098c9f6216dd3

Registrator tree SHA: 7c16227cd1dc9bae38e25d6dc6f9c020f8ebca46

--- a/G/GriddingMachine/Versions.toml
+++ b/G/GriddingMachine/Versions.toml
@@ -6,3 +6,6 @@ git-tree-sha1 = "c745ac32bbca0908a852bd18febf2b305141738c"
 
 ["0.1.2"]
 git-tree-sha1 = "f15b2dc968fb45f796a9f808710d0a81bc9d6a3a"
+
+["0.1.3"]
+git-tree-sha1 = "5c20012212c0bf91b04ab88ba65098c9f6216dd3"
