--- a/G/GriddingMachine/Compat.toml
+++ b/G/GriddingMachine/Compat.toml
@@ -7,11 +7,16 @@ Glob = "1.3.0-1"
 LazyArtifacts = "1.3.0-1"
 NetCDF = "0.10"
 Parameters = "0.12"
-PkgUtility = "0.1"
 ProgressMeter = "1.3.0-1"
 
 ["0-0.1.0"]
 julia = "1.3.0-1"
 
+["0-0.1.2"]
+PkgUtility = "0.1"
+
 ["0.1.1-0"]
 julia = "1.5.0-1"
+
+["0.1.3-0"]
+PkgUtility = "0.1.2-0.1"
