New version: Photosynthesis v0.1.3
UUID: 537ec7c9-aaee-45d0-8af0-4b77892958a6
Repo: https://github.com/Yujie-W/Photosynthesis.jl.git
Tree: 4145dc35635b990cdab0d74d857e90fdf1b21798

Registrator tree SHA: 7c16227cd1dc9bae38e25d6dc6f9c020f8ebca46

--- a/P/Photosynthesis/Versions.toml
+++ b/P/Photosynthesis/Versions.toml
@@ -9,3 +9,6 @@ git-tree-sha1 = "7736688e8ce6ae3f6e68e5cede189aa859f1acc0"
 
 ["0.1.2"]
 git-tree-sha1 = "bd1ead01fc2f2dbe95ea6de45408b34e0bd5edb4"
+
+["0.1.3"]
+git-tree-sha1 = "4145dc35635b990cdab0d74d857e90fdf1b21798"
