--- a/P/Photosynthesis/Deps.toml
+++ b/P/Photosynthesis/Deps.toml
@@ -5,3 +5,6 @@ DocStringExtensions = "ffbed154-4ef7-542d-bbb7-c09d3a79fcae"
 Parameters = "d96e819e-fc66-5662-9728-84c9c7592b0a"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 WaterPhysics = "20dd5ee6-61da-454b-ac5d-c09c2977e03a"
+
+["0.1.3-0"]
+PkgUtility = "0d262f2c-28e9-492c-8e19-d7a5c4f11611"
