--- a/C/ClusteringDifferences/Compat.toml
+++ b/C/ClusteringDifferences/Compat.toml
@@ -6,15 +6,21 @@ julia = "1.3.0-1"
 ["0.2"]
 DifferencesBase = "0.6"
 
-["0.2-0"]
-Distances = "0.9"
-
 ["0.2-0.6"]
 julia = "1.4.0-1"
+
+["0.2-0.7"]
+Distances = "0.9"
 
 ["0.3-0.6"]
 DifferencesBase = "0.7"
 
-["0.7-0"]
+["0.7"]
 DifferencesBase = "0.8"
+
+["0.7-0"]
 julia = "1.5.0-1"
+
+["0.8-0"]
+DifferencesBase = "0.15"
+Distances = "0.10"
