--- a/C/ClusteringDifferences/Versions.toml
+++ b/C/ClusteringDifferences/Versions.toml
@@ -27,3 +27,6 @@ git-tree-sha1 = "5aaaef445698469b6c29d0637d98b5c24d460011"
 
 ["0.7.0"]
 git-tree-sha1 = "bb6b67cf482bcde69a5ad1374122a35a226a21de"
+
+["0.8.0"]
+git-tree-sha1 = "757ba148b24574ef82d9f396d685ed6b587dcc84"
