New version: SimpleGraphs v0.7.5
UUID: 55797a34-41de-5266-9ec1-32ac4eb504d3
Repo: https://github.com/scheinerman/SimpleGraphs.jl.git
Tree: 188ddab4713a1f2dd3c938b68695e3db0e111c6f

Registrator tree SHA: 7c16227cd1dc9bae38e25d6dc6f9c020f8ebca46

--- a/S/SimpleGraphs/Versions.toml
+++ b/S/SimpleGraphs/Versions.toml
@@ -99,3 +99,6 @@ git-tree-sha1 = "9209c31a1c09a4565ed67f3aef0faae0acce9877"
 
 ["0.7.4"]
 git-tree-sha1 = "a35686e0673ad587de3c05a37a3fc32df8c783af"
+
+["0.7.5"]
+git-tree-sha1 = "188ddab4713a1f2dd3c938b68695e3db0e111c6f"
