New version: Pingouin v0.2.2
UUID: 61ac1d4c-5a1f-4019-949c-7919748f8c44
Repo: https://github.com/clementpoiret/Pingouin.jl.git
Tree: a83644370db34a98ecded65b974d680752f1fd13

Registrator tree SHA: 7c16227cd1dc9bae38e25d6dc6f9c020f8ebca46

--- a/P/Pingouin/Versions.toml
+++ b/P/Pingouin/Versions.toml
@@ -6,3 +6,6 @@ git-tree-sha1 = "296c0b14b09592f04cd90a98d3358acafa81bc92"
 
 ["0.2.1"]
 git-tree-sha1 = "08e4017311a970aeb3006d92482bb468fee41a94"
+
+["0.2.2"]
+git-tree-sha1 = "a83644370db34a98ecded65b974d680752f1fd13"
