New version: ClusteringDifferences v0.8.1
UUID: a029d29b-0e57-4782-a64c-38d2809d16dd
Repo: https://github.com/laschuet/ClusteringDifferences.jl.git
Tree: ed4766e06bfef96dd2c1e28b3105cc93ebd5c54b

Registrator tree SHA: 7c16227cd1dc9bae38e25d6dc6f9c020f8ebca46

--- a/C/ClusteringDifferences/Versions.toml
+++ b/C/ClusteringDifferences/Versions.toml
@@ -30,3 +30,6 @@ git-tree-sha1 = "bb6b67cf482bcde69a5ad1374122a35a226a21de"
 
 ["0.8.0"]
 git-tree-sha1 = "757ba148b24574ef82d9f396d685ed6b587dcc84"
+
+["0.8.1"]
+git-tree-sha1 = "ed4766e06bfef96dd2c1e28b3105cc93ebd5c54b"
