New version: CurrentPopulationSurvey v1.2.0
UUID: d0231af6-78e7-4e9e-9602-dcd107aeccbe
Repo: https://github.com/mthelm85/CurrentPopulationSurvey.jl.git
Tree: 2f32ceef4ddd1452eceef4172238d458eab15edc

Registrator tree SHA: 7c16227cd1dc9bae38e25d6dc6f9c020f8ebca46

--- a/C/CurrentPopulationSurvey/Versions.toml
+++ b/C/CurrentPopulationSurvey/Versions.toml
@@ -54,3 +54,6 @@ git-tree-sha1 = "502903a35179571b24ddabf0a3ee2669862bba6a"
 
 ["1.1.9"]
 git-tree-sha1 = "d6e3dc166f6497291c85b5b2684c6352a05d0efd"
+
+["1.2.0"]
+git-tree-sha1 = "2f32ceef4ddd1452eceef4172238d458eab15edc"
