New version: ExpFamilyDistributions v0.5.0
UUID: ac7c78bc-e309-483d-b879-ab7fdbfc3919
Repo: https://github.com/lucasondel/ExpFamilyDistributions.git
Tree: 7b00c97c9ab4dd2ab0493216023da2b656f76418

Registrator tree SHA: 7c16227cd1dc9bae38e25d6dc6f9c020f8ebca46

--- a/E/ExpFamilyDistributions/Versions.toml
+++ b/E/ExpFamilyDistributions/Versions.toml
@@ -12,3 +12,6 @@ git-tree-sha1 = "fc7e746946c12ed98de8ed52ebcf218796b35311"
 
 ["0.4.0"]
 git-tree-sha1 = "e039855d4b2ca8f2fea52fc3d83ffebdfe2679f9"
+
+["0.5.0"]
+git-tree-sha1 = "7b00c97c9ab4dd2ab0493216023da2b656f76418"
