--- a/F/FluxExtra/Versions.toml
+++ b/F/FluxExtra/Versions.toml
@@ -1,2 +1,5 @@
 ["0.1.0"]
 git-tree-sha1 = "997de7817f33fdd143038f3dc1b5cac367eaac8d"
+
+["0.1.1"]
+git-tree-sha1 = "8af25e7574816afec983271ed61c72fa8a1496ae"
