New version: Catlab v0.11.1
UUID: 134e5e36-593f-5add-ad60-77f754baafbe
Repo: https://github.com/AlgebraicJulia/Catlab.jl.git
Tree: 1446af9355c3476f3fd8345ddf804622590cb467

Registrator tree SHA: 7c16227cd1dc9bae38e25d6dc6f9c020f8ebca46

--- a/C/Catlab/Versions.toml
+++ b/C/Catlab/Versions.toml
@@ -87,3 +87,6 @@ git-tree-sha1 = "c255795d0ac86f518febacc2da043b9ab6e4dee7"
 
 ["0.11.0"]
 git-tree-sha1 = "b03b9db6a8aaac1181e2f0422f977d68b64fd79b"
+
+["0.11.1"]
+git-tree-sha1 = "1446af9355c3476f3fd8345ddf804622590cb467"
