--- a/J/JMcDM/Versions.toml
+++ b/J/JMcDM/Versions.toml
@@ -9,3 +9,6 @@ git-tree-sha1 = "7577fddde5c2e63c6482c3204e73322fef035ed6"
 
 ["0.1.3"]
 git-tree-sha1 = "f3c9b595b844fb14cade2f617647a230bbacee3d"
+
+["0.1.4"]
+git-tree-sha1 = "acd16d0ba450062c4c1afb8e01281bd8279331b8"
