New version: ClusteringDifferences v0.9.0
UUID: a029d29b-0e57-4782-a64c-38d2809d16dd
Repo: https://github.com/laschuet/ClusteringDifferences.jl.git
Tree: 318b4d422089e0a9066553a78681e6df59f855b5

Registrator tree SHA: 7c16227cd1dc9bae38e25d6dc6f9c020f8ebca46

--- a/C/ClusteringDifferences/Deps.toml
+++ b/C/ClusteringDifferences/Deps.toml
@@ -1,3 +1,6 @@
 [0]
 DifferencesBase = "f7c07657-0d0a-4d46-b086-01df223a7b4f"
 Distances = "b4f34e82-e78d-54a5-968a-f98e89d6e8f7"
+
+["0.9-0"]
+Clustering = "aaaa29a8-35af-508c-8bc3-b662a17a0fe5"
