--- a/C/ClusteringDifferences/Versions.toml
+++ b/C/ClusteringDifferences/Versions.toml
@@ -33,3 +33,6 @@ git-tree-sha1 = "757ba148b24574ef82d9f396d685ed6b587dcc84"
 
 ["0.8.1"]
 git-tree-sha1 = "ed4766e06bfef96dd2c1e28b3105cc93ebd5c54b"
+
+["0.9.0"]
+git-tree-sha1 = "318b4d422089e0a9066553a78681e6df59f855b5"
