New version: DifferencesBase v0.15.1
UUID: f7c07657-0d0a-4d46-b086-01df223a7b4f
Repo: https://github.com/laschuet/DifferencesBase.jl.git
Tree: e64dfe04c870a3a678e398026ec0ef6e139b2f5f

Registrator tree SHA: 7c16227cd1dc9bae38e25d6dc6f9c020f8ebca46

--- a/D/DifferencesBase/Versions.toml
+++ b/D/DifferencesBase/Versions.toml
@@ -42,3 +42,6 @@ git-tree-sha1 = "8d65cc4e690a8cef0bdc4c01f8494f573b98dbdb"
 
 ["0.15.0"]
 git-tree-sha1 = "87a001e1d1a34a6a29e342ad2e61a6f67fdd653c"
+
+["0.15.1"]
+git-tree-sha1 = "e64dfe04c870a3a678e398026ec0ef6e139b2f5f"
