--- a/F/FluxExtra/Versions.toml
+++ b/F/FluxExtra/Versions.toml
@@ -3,3 +3,6 @@ git-tree-sha1 = "997de7817f33fdd143038f3dc1b5cac367eaac8d"
 
 ["0.1.1"]
 git-tree-sha1 = "8af25e7574816afec983271ed61c72fa8a1496ae"
+
+["0.1.2"]
+git-tree-sha1 = "1c4c8a6e5ff3b766bb639cf88fc94f403cfa96c3"
