New version: ClusteringDifferences v0.9.1
UUID: a029d29b-0e57-4782-a64c-38d2809d16dd
Repo: https://github.com/laschuet/ClusteringDifferences.jl.git
Tree: cb939e89416c71970cf9957141b614d4f93171a6

Registrator tree SHA: 7c16227cd1dc9bae38e25d6dc6f9c020f8ebca46

--- a/C/ClusteringDifferences/Versions.toml
+++ b/C/ClusteringDifferences/Versions.toml
@@ -36,3 +36,6 @@ git-tree-sha1 = "ed4766e06bfef96dd2c1e28b3105cc93ebd5c54b"
 
 ["0.9.0"]
 git-tree-sha1 = "318b4d422089e0a9066553a78681e6df59f855b5"
+
+["0.9.1"]
+git-tree-sha1 = "cb939e89416c71970cf9957141b614d4f93171a6"
