New version: StomataModels v0.1.5
UUID: 5fa394f2-99ce-4e3a-9704-be7b3526889d
Repo: https://github.com/Yujie-W/StomataModels.jl.git
Tree: b00363cc0d6d975c6cba67817599ec0f374fe572

Registrator tree SHA: 7c16227cd1dc9bae38e25d6dc6f9c020f8ebca46

--- a/S/StomataModels/Versions.toml
+++ b/S/StomataModels/Versions.toml
@@ -15,3 +15,6 @@ git-tree-sha1 = "afc459dc33f7d9bac3f99ab6f385104d01ec7138"
 
 ["0.1.4"]
 git-tree-sha1 = "86c82eb54b85accc10e0d1c1646b56d7aa8f9207"
+
+["0.1.5"]
+git-tree-sha1 = "b00363cc0d6d975c6cba67817599ec0f374fe572"
