New version: LocalSearchSolvers v0.2.1
UUID: 2b10edaa-728d-4283-ac71-07e312d6ccf3
Repo: https://github.com/JuliaConstraints/LocalSearchSolvers.jl.git
Tree: 5aaa9451b15b964ab6330081dbb996cf3d02c6fd

Registrator tree SHA: 7c16227cd1dc9bae38e25d6dc6f9c020f8ebca46

--- a/L/LocalSearchSolvers/Versions.toml
+++ b/L/LocalSearchSolvers/Versions.toml
@@ -30,3 +30,6 @@ git-tree-sha1 = "9432f923f07121f93b5f87ec572ff0ec86b55cbc"
 
 ["0.2.0"]
 git-tree-sha1 = "b072854474da07d056e707510fa4d3b1467a8b5d"
+
+["0.2.1"]
+git-tree-sha1 = "5aaa9451b15b964ab6330081dbb996cf3d02c6fd"
