--- a/D/DifferencesBase/Versions.toml
+++ b/D/DifferencesBase/Versions.toml
@@ -45,3 +45,6 @@ git-tree-sha1 = "87a001e1d1a34a6a29e342ad2e61a6f67fdd653c"
 
 ["0.15.1"]
 git-tree-sha1 = "e64dfe04c870a3a678e398026ec0ef6e139b2f5f"
+
+["0.15.2"]
+git-tree-sha1 = "1e8480e964846429b89d0bb253aeb34dd5adba2f"
