--- a/Registry.toml
+++ b/Registry.toml
@@ -1338,6 +1338,7 @@ some amount of consideration when choosing package names.
 4161f7c7-f4e7-47ff-bbcb-bc0b24702626 = { name = "BatchIterators", path = "B/BatchIterators" }
 418bc28f-b43b-5e0b-a6e7-61bbc1a2c1df = { name = "YaoBlocks", path = "Y/YaoBlocks" }
 41994980-b535-5476-86a1-6733688e0e4a = { name = "D3TypeTrees", path = "D/D3TypeTrees" }
+419ca8c6-2b20-4634-9f6c-b2c5f1429aea = { name = "NCDataFrame", path = "N/NCDataFrame" }
 41a02a25-b8f0-4f67-bc48-60067656b558 = { name = "Folds", path = "F/Folds" }
 41a43668-ff68-5e81-b2d7-6ef3c0dd3db1 = { name = "ForestBiometrics", path = "F/ForestBiometrics" }
 41a5a540-3a0e-51a4-a518-13553378ad37 = { name = "UDPipe_jll", path = "U/UDPipe_jll" }
