--- a/E/ExpFamilyDistributions/Versions.toml
+++ b/E/ExpFamilyDistributions/Versions.toml
@@ -15,3 +15,6 @@ git-tree-sha1 = "e039855d4b2ca8f2fea52fc3d83ffebdfe2679f9"
 
 ["0.5.0"]
 git-tree-sha1 = "7b00c97c9ab4dd2ab0493216023da2b656f76418"
+
+["0.6.0"]
+git-tree-sha1 = "3b71621cf2ecce0ba422df3b1ddf55410c55f223"
