New version: BlockDiagonals v0.1.15
UUID: 0a1fb500-61f7-11e9-3c65-f5ef3456f9f0
Repo: https://github.com/invenia/BlockDiagonals.jl.git
Tree: f6cefa818d7a27703b5f9cb89406bf6284c52251

Registrator tree SHA: 7c16227cd1dc9bae38e25d6dc6f9c020f8ebca46

--- a/B/BlockDiagonals/Versions.toml
+++ b/B/BlockDiagonals/Versions.toml
@@ -42,3 +42,6 @@ git-tree-sha1 = "a0b8235d0c28c96d0b6f6e458654655020c35e75"
 
 ["0.1.14"]
 git-tree-sha1 = "109b86b95295ca54588fdeb82b599ead2a3de258"
+
+["0.1.15"]
+git-tree-sha1 = "f6cefa818d7a27703b5f9cb89406bf6284c52251"
