--- a/S/SymbolicUtils/Compat.toml
+++ b/S/SymbolicUtils/Compat.toml
@@ -31,7 +31,7 @@ AbstractAlgebra = "0.9-0.11"
 DataStructures = "0.18"
 SpecialFunctions = ["0.10", "1"]
 
-["0.6.3-0"]
+["0.6.3-0.8.2"]
 AbstractAlgebra = "0.9-0.12"
 
 ["0.8-0"]
@@ -46,3 +46,6 @@ AbstractTrees = "0.3"
 
 ["0.8.2-0"]
 StaticArrays = ["0.12", "1"]
+
+["0.8.3-0"]
+AbstractAlgebra = "0.9-0.13"
