New version: PolytonicGreek v0.2.0
UUID: 72b824a7-2b4a-40fa-944c-ac4f345dc63a
Repo: https://github.com/neelsmith/PolytonicGreek.jl.git
Tree: 7d0b1310564b18137fcef1bed778acc2af44ddfd

Registrator tree SHA: 7c16227cd1dc9bae38e25d6dc6f9c020f8ebca46

--- a/P/PolytonicGreek/Versions.toml
+++ b/P/PolytonicGreek/Versions.toml
@@ -6,3 +6,6 @@ git-tree-sha1 = "bd05314c0b24513fbb03d540a28858769f5efa44"
 
 ["0.1.2"]
 git-tree-sha1 = "71cdcc713f3c3867edcd64745f9d747d4d33594c"
+
+["0.2.0"]
+git-tree-sha1 = "7d0b1310564b18137fcef1bed778acc2af44ddfd"
