--- a/D/DelayEmbeddings/Versions.toml
+++ b/D/DelayEmbeddings/Versions.toml
@@ -135,3 +135,6 @@ git-tree-sha1 = "9e8eaf505c7d237834e67421fdae267fc154ed9b"
 
 ["1.20.1"]
 git-tree-sha1 = "e2c028af0343a65549358f84ff87c43f5ef0473b"
+
+["1.20.2"]
+git-tree-sha1 = "abe2092914b02146004ff34b6549a115de3c31a8"
