New version: DataRegistryUtils v0.50.3
UUID: 1a5903ec-9658-4297-bb6d-314c615f2e02
Repo: https://github.com/ScottishCovidResponse/DataRegistryUtils.jl.git
Tree: 2bc43db1cceeca9f1a5ffc2347e3ba9f8c3c5aee

Registrator tree SHA: 7c16227cd1dc9bae38e25d6dc6f9c020f8ebca46

--- a/D/DataRegistryUtils/Versions.toml
+++ b/D/DataRegistryUtils/Versions.toml
@@ -1,2 +1,5 @@
 ["0.4.0"]
 git-tree-sha1 = "46fd53c4b4678e71f10080af6b02176a19fa20c9"
+
+["0.50.3"]
+git-tree-sha1 = "2bc43db1cceeca9f1a5ffc2347e3ba9f8c3c5aee"
