--- a/Registry.toml
+++ b/Registry.toml
@@ -913,6 +913,7 @@ some amount of consideration when choosing package names.
 2c92f082-f457-11e9-1715-ebb1b5fff37b = { name = "CapacityExpansionData", path = "C/CapacityExpansionData" }
 2c982244-eb47-11e8-1c11-070084c1fd7d = { name = "EdgeCameras", path = "E/EdgeCameras" }
 2c99449f-f194-5e92-8ff0-13814ff41dcf = { name = "PROPACK_jll", path = "P/PROPACK_jll" }
+2ca40811-0e74-4ca9-a2c0-1cd8c267dd5a = { name = "StableHashes", path = "S/StableHashes" }
 2cb19f9e-ec4d-5c53-8573-a4542a68d3f0 = { name = "StatsKit", path = "S/StatsKit" }
 2cbbab25-fc8b-58cf-88d4-687a02676033 = { name = "DuckDB_jll", path = "D/DuckDB_jll" }
 2cbf6e9d-eec9-4262-aa18-cb9280186e6b = { name = "HardSphereDynamics", path = "H/HardSphereDynamics" }
