--- a/L/Lathe/Compat.toml
+++ b/L/Lathe/Compat.toml
@@ -13,7 +13,7 @@ julia = "1.2.0-1"
 ["0.1-0.1.4"]
 DataFrames = "0.21.1-0.21"
 
-["0.1.3-0"]
+["0.1.3-0.1.5"]
 julia = "1.4.2-1"
 
 ["0.1.4-0"]
@@ -21,3 +21,6 @@ Distributions = "0.24.1-0.24"
 
 ["0.1.5-0"]
 DataFrames = "0.22"
+
+["0.1.6-0"]
+julia = "1.5.2-1"
