--- a/L/Lathe/Versions.toml
+++ b/L/Lathe/Versions.toml
@@ -21,3 +21,6 @@ git-tree-sha1 = "c0e9f69f766e68faae19badbdaae122c2d85a88a"
 
 ["0.1.5"]
 git-tree-sha1 = "8083415a5de3339c4a3a85af3ec74026aec440fc"
+
+["0.1.6"]
+git-tree-sha1 = "9d4a163b3d20c012491b22ba39d5519b78352623"
