New version: DocumentationGenerator v0.3.13
UUID: 8f0d3306-d70b-5309-b898-24bb6ab47850
Repo: https://github.com/JuliaDocs/DocumentationGenerator.jl.git
Tree: 35d1e723ef805fd865ea1257dce2f589fba3f852

Registrator tree SHA: 7c16227cd1dc9bae38e25d6dc6f9c020f8ebca46

--- a/D/DocumentationGenerator/Versions.toml
+++ b/D/DocumentationGenerator/Versions.toml
@@ -66,3 +66,6 @@ git-tree-sha1 = "19f1d42f9fc9d8e26a91d5d407c35f1dd0bf83f6"
 
 ["0.3.12"]
 git-tree-sha1 = "c5e650c115cdd48baff2d7e55bde4957772e3225"
+
+["0.3.13"]
+git-tree-sha1 = "35d1e723ef805fd865ea1257dce2f589fba3f852"
