--- a/C/CitableText/Versions.toml
+++ b/C/CitableText/Versions.toml
@@ -21,3 +21,6 @@ git-tree-sha1 = "11a3280b4361b4bbde4136256225c7b51f6c67f2"
 
 ["0.4.1"]
 git-tree-sha1 = "86b6a790e2af40f6c3db5d7bb12aacc223d6c9a5"
+
+["0.5.0"]
+git-tree-sha1 = "717cae10c76416054375330b8d8609c61e4a675e"
