--- a/E/EditionBuilders/Versions.toml
+++ b/E/EditionBuilders/Versions.toml
@@ -33,3 +33,6 @@ git-tree-sha1 = "caead532f547a505047966335ea0fa3534e322a8"
 
 ["0.2.10"]
 git-tree-sha1 = "3298946c5041ac9f4f26376f7b815f0eaa543331"
+
+["0.3.1"]
+git-tree-sha1 = "0816beb2c422f81244fd619f2fd46846080ff3c2"
