New version: CitableTeiReaders v0.4.3
UUID: b4325aa9-906c-402e-9c3f-19ab8a88308e
Repo: https://github.com/HCMID/CitableTeiReaders.jl.git
Tree: ca77ff3536da3f9406aa3f38e16889164401bd29

Registrator tree SHA: 7c16227cd1dc9bae38e25d6dc6f9c020f8ebca46

--- a/C/CitableTeiReaders/Compat.toml
+++ b/C/CitableTeiReaders/Compat.toml
@@ -10,5 +10,8 @@ CitableText = "0.2"
 ["0.2.0"]
 CitableText = "0.3"
 
-["0.2.1-0"]
+["0.2.1-0.4.2"]
 CitableText = "0.3-0.4"
+
+["0.4.3-0"]
+CitableText = "0.3-0.5"
