--- a/C/CitableTeiReaders/Versions.toml
+++ b/C/CitableTeiReaders/Versions.toml
@@ -18,3 +18,6 @@ git-tree-sha1 = "7e084a8ff68e12d96cc6bdd226e6f3fcf9135297"
 
 ["0.4.2"]
 git-tree-sha1 = "e533934dab12022718ff312d8c291f0a7c12e3f4"
+
+["0.4.3"]
+git-tree-sha1 = "ca77ff3536da3f9406aa3f38e16889164401bd29"
