--- a/P/Pitaya/Versions.toml
+++ b/P/Pitaya/Versions.toml
@@ -1,2 +1,5 @@
 ["0.1.0"]
 git-tree-sha1 = "dfe881eecfc8c82692aafb2815134d1c47022649"
+
+["0.1.5"]
+git-tree-sha1 = "9aec8c120fd83c1f12271b53b099778043fcf9bb"
