New version: ExpFamilyDistributions v0.7.0
UUID: ac7c78bc-e309-483d-b879-ab7fdbfc3919
Repo: https://github.com/lucasondel/ExpFamilyDistributions.git
Tree: b527bfa4da87c4525747c070c8ceec0ed154c397

Registrator tree SHA: 7c16227cd1dc9bae38e25d6dc6f9c020f8ebca46

--- a/E/ExpFamilyDistributions/Versions.toml
+++ b/E/ExpFamilyDistributions/Versions.toml
@@ -18,3 +18,6 @@ git-tree-sha1 = "7b00c97c9ab4dd2ab0493216023da2b656f76418"
 
 ["0.6.0"]
 git-tree-sha1 = "3b71621cf2ecce0ba422df3b1ddf55410c55f223"
+
+["0.7.0"]
+git-tree-sha1 = "b527bfa4da87c4525747c070c8ceec0ed154c397"
