New version: StatisticalRethinking v3.2.6
UUID: 2d09df54-9d0f-5258-8220-54c2a3d4fbee
Repo: https://github.com/StatisticalRethinkingJulia/StatisticalRethinking.jl.git
Tree: 8a0623776f3a31c5d4d84c5235a61ad80a867858

Registrator tree SHA: 7c16227cd1dc9bae38e25d6dc6f9c020f8ebca46

--- a/S/StatisticalRethinking/Versions.toml
+++ b/S/StatisticalRethinking/Versions.toml
@@ -162,3 +162,6 @@ git-tree-sha1 = "5ffc72b69bcbe11eb07dc7cfad0f02e467cfabfc"
 
 ["3.2.5"]
 git-tree-sha1 = "569471a1c7c6bc75976b7b378afdf95c93f205f8"
+
+["3.2.6"]
+git-tree-sha1 = "8a0623776f3a31c5d4d84c5235a61ad80a867858"
