--- a/B/BlockDiagonals/Compat.toml
+++ b/B/BlockDiagonals/Compat.toml
@@ -4,6 +4,9 @@ julia = "1"
 ["0-0.1.3"]
 FillArrays = "0.0.0 - 0.7"
 
+["0.1.16-0"]
+FiniteDifferences = "0.12"
+
 ["0.1.4"]
 FillArrays = "0.6-0.7"
 
