--- a/Registry.toml
+++ b/Registry.toml
@@ -4997,6 +4997,7 @@ fa961155-64e5-5f13-b03f-caf6b980ea82 = { name = "CEnum", path = "C/CEnum" }
 fa9e2bbc-20aa-512b-a47b-5a4d8687aaeb = { name = "StorageGraphs", path = "S/StorageGraphs" }
 fa9e6d27-338f-4c48-a526-3b082c2df35e = { name = "ElectronTests", path = "E/ElectronTests" }
 faabce77-3242-5060-abab-4a4767a0df42 = { name = "AtariAlgos", path = "A/AtariAlgos" }
+fac17066-6efe-4494-9398-e70f574ba8bc = { name = "XCBased", path = "X/XCBased" }
 fad6cfc8-4f83-11e9-06cc-151124046ad0 = { name = "ParallelUtilities", path = "P/ParallelUtilities" }
 fae3f90e-61e0-11e9-203b-a1b4e36eae6f = { name = "RevealedPreferences", path = "R/RevealedPreferences" }
 fae87a5f-d1ad-5cf0-8f61-c941e1580b46 = { name = "ParserCombinator", path = "P/ParserCombinator" }
