New version: Vlasiator v0.2.3
UUID: 7d2ba682-ad6e-4e20-80d9-3f2d4a610bb4
Repo: https://github.com/henry2004y/Vlasiator.jl.git
Tree: 7de31fdbbd71d892c4cea67b4a67e22bd6c82f40

Registrator tree SHA: 7c16227cd1dc9bae38e25d6dc6f9c020f8ebca46

--- a/V/Vlasiator/Versions.toml
+++ b/V/Vlasiator/Versions.toml
@@ -36,3 +36,6 @@ git-tree-sha1 = "333bdc7cac0f50a417871e7996842a4578156f0e"
 
 ["0.2.2"]
 git-tree-sha1 = "8be7cea51a77e4c9a150c18c1a4e0afe29e58ceb"
+
+["0.2.3"]
+git-tree-sha1 = "7de31fdbbd71d892c4cea67b4a67e22bd6c82f40"
