New version: EditionBuilders v0.2.12
UUID: 2fb66cca-c1f8-4a32-85dd-1a01a9e8cd8f
Repo: https://github.com/HCMID/EditionBuilders.jl.git
Tree: 25d577053324bfe297aefb66a1a07ecdc0b060d4

Registrator tree SHA: 7c16227cd1dc9bae38e25d6dc6f9c020f8ebca46

--- a/E/EditionBuilders/Versions.toml
+++ b/E/EditionBuilders/Versions.toml
@@ -36,3 +36,6 @@ git-tree-sha1 = "3298946c5041ac9f4f26376f7b815f0eaa543331"
 
 ["0.2.11"]
 git-tree-sha1 = "0ff3051ffe710c2c5f6bb083cde2a03740314297"
+
+["0.2.12"]
+git-tree-sha1 = "25d577053324bfe297aefb66a1a07ecdc0b060d4"
