--- a/Registry.toml
+++ b/Registry.toml
@@ -4080,6 +4080,7 @@ c8f6d549-b3ab-5508-a0d1-48fe138e8cc1 = { name = "Clipper", path = "C/Clipper" }
 c8fd0db2-566d-4870-b0fd-1c038e266d70 = { name = "HigherOrderDerivatives", path = "H/HigherOrderDerivatives" }
 c8ffd9c3-330d-5841-b78e-0817d7145fa1 = { name = "MbedTLS_jll", path = "M/MbedTLS_jll" }
 c900ad91-5c7c-41b8-bce1-46b0264fae1d = { name = "DateSelectors", path = "D/DateSelectors" }
+c916fbc8-b869-4f3a-86b1-58538899335e = { name = "SHTOOLS", path = "S/SHTOOLS" }
 c91e804a-d5a3-530f-b6f0-dfbca275c004 = { name = "Gadfly", path = "G/Gadfly" }
 c927be06-f564-11e9-2e25-11633cdb9fcb = { name = "SymSemiseparableMatrices", path = "S/SymSemiseparableMatrices" }
 c9310f65-a42c-5928-aca3-d34f64192029 = { name = "PCRE2", path = "P/PCRE2" }
