New version: Lycian v0.1.4
UUID: 7c215dd3-d1b4-4517-b6c6-0123f1059a20
Repo: https://github.com/neelsmith/Lycian.jl.git
Tree: 69b3fd01cbbc89e193ae9f47f1a37824dd22dc7d

Registrator tree SHA: 7c16227cd1dc9bae38e25d6dc6f9c020f8ebca46

--- a/L/Lycian/Versions.toml
+++ b/L/Lycian/Versions.toml
@@ -9,3 +9,6 @@ git-tree-sha1 = "690a8d35f2f19c125130e01ded9e0babef11c7fb"
 
 ["0.1.3"]
 git-tree-sha1 = "059ea8769fae60ae8641720f9a9af8cd9f944125"
+
+["0.1.4"]
+git-tree-sha1 = "69b3fd01cbbc89e193ae9f47f1a37824dd22dc7d"
