New version: StructuredArrays v0.2.2
UUID: 2e8cd123-6858-488d-b42d-068777248635
Repo: https://github.com/emmt/StructuredArrays.jl.git
Tree: 0cc8436a17791431675eb229b5b16175b001055b

Registrator tree SHA: 7c16227cd1dc9bae38e25d6dc6f9c020f8ebca46

--- a/S/StructuredArrays/Versions.toml
+++ b/S/StructuredArrays/Versions.toml
@@ -3,3 +3,6 @@ git-tree-sha1 = "daa547658b9db111375845f1450c49defc269bbf"
 
 ["0.2.1"]
 git-tree-sha1 = "b1edf077a3ad7dfbe050616164081a2d20a788a7"
+
+["0.2.2"]
+git-tree-sha1 = "0cc8436a17791431675eb229b5b16175b001055b"
