--- a/R/ResizableArrays/Versions.toml
+++ b/R/ResizableArrays/Versions.toml
@@ -6,3 +6,6 @@ git-tree-sha1 = "16678ebb2ec6d6a89a313abff5b42ce7694cba31"
 
 ["0.3.0"]
 git-tree-sha1 = "d3d29cb0e549d82939f48f8441e709680c7e3022"
+
+["0.3.1"]
+git-tree-sha1 = "b13f259547420ba75e7c725f6185d64153543949"
