New version: ArrayTools v0.2.1
UUID: 1dc0ca97-c5ce-4e77-ac6d-c576ac9d7f27
Repo: https://github.com/emmt/ArrayTools.jl.git
Tree: 133bc65cb1241014956be71aaae9bb309519a1a3

Registrator tree SHA: 7c16227cd1dc9bae38e25d6dc6f9c020f8ebca46

--- a/A/ArrayTools/Versions.toml
+++ b/A/ArrayTools/Versions.toml
@@ -1,2 +1,5 @@
 ["0.2.0"]
 git-tree-sha1 = "e02f327284f227bfabe3183bfb27e21e96fc1a3b"
+
+["0.2.1"]
+git-tree-sha1 = "133bc65cb1241014956be71aaae9bb309519a1a3"
