New version: Lycian v0.1.5
UUID: 7c215dd3-d1b4-4517-b6c6-0123f1059a20
Repo: https://github.com/neelsmith/Lycian.jl.git
Tree: efe4830fb0ec92cf56c13da457e2ad506326ab8d

Registrator tree SHA: 7c16227cd1dc9bae38e25d6dc6f9c020f8ebca46

--- a/L/Lycian/Versions.toml
+++ b/L/Lycian/Versions.toml
@@ -12,3 +12,6 @@ git-tree-sha1 = "059ea8769fae60ae8641720f9a9af8cd9f944125"
 
 ["0.1.4"]
 git-tree-sha1 = "69b3fd01cbbc89e193ae9f47f1a37824dd22dc7d"
+
+["0.1.5"]
+git-tree-sha1 = "efe4830fb0ec92cf56c13da457e2ad506326ab8d"
