--- a/Registry.toml
+++ b/Registry.toml
@@ -4145,6 +4145,7 @@ cc6bae93-f070-4015-88fd-838f9505a86c = { name = "DomainIntegrals", path = "D/Dom
 cc83e5c8-98fc-11e9-313e-e750fdcd15c8 = { name = "KronLinInv", path = "K/KronLinInv" }
 cc87a3b2-3706-4f35-b5b4-b2c85061916d = { name = "Navigation", path = "N/Navigation" }
 cc8bc4a8-27d6-5769-a93b-9d913e69aa62 = { name = "Widgets", path = "W/Widgets" }
+cc8cb6e0-4c11-4d04-b964-59e7aacda730 = { name = "EconoSim", path = "E/EconoSim" }
 cc8e9863-198f-4c11-8208-8a22403099d5 = { name = "NetworkProtocols", path = "N/NetworkProtocols" }
 cc8eb9ea-40c6-483d-ae01-5f60885b8dd9 = { name = "ExactReals", path = "E/ExactReals" }
 cc8fcbce-1519-41ac-a9d5-7b019a31028d = { name = "OptimizingIR", path = "O/OptimizingIR" }
